log/build_2021-07-10_18-39-38/stepper_motor/stdout_stderr.log
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt))
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  % (opt, underscore_opt))
running egg_info
writing ../../../build/stepper_motor/stepper_motor.egg-info/PKG-INFO
writing dependency_links to ../../../build/stepper_motor/stepper_motor.egg-info/dependency_links.txt
writing entry points to ../../../build/stepper_motor/stepper_motor.egg-info/entry_points.txt
writing requirements to ../../../build/stepper_motor/stepper_motor.egg-info/requires.txt
writing top-level names to ../../../build/stepper_motor/stepper_motor.egg-info/top_level.txt
reading manifest file '../../../build/stepper_motor/stepper_motor.egg-info/SOURCES.txt'
writing manifest file '../../../build/stepper_motor/stepper_motor.egg-info/SOURCES.txt'
running build
running build_py
copying stepper_motor/steering_node.py -> /home/usr/usr_ws_2020/build/stepper_motor/build/lib/stepper_motor
running install
running install_lib
copying /home/usr/usr_ws_2020/build/stepper_motor/build/lib/stepper_motor/steering_node.py -> /home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor
byte-compiling /home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor/steering_node.py to steering_node.cpython-36.pyc
running install_data
  File "/home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor/steering_node.py", line 122
    return *self.steps)round((deg/360)
           ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../../build/stepper_motor/stepper_motor.egg-info to /home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor-0.0.0-py3.6.egg-info
running install_scripts
Installing steering_node script to /home/usr/usr_ws_2020/install/stepper_motor/lib/stepper_motor
writing list of installed files to '/home/usr/usr_ws_2020/build/stepper_motor/install.log'
